--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,8 @@
 Package: PPspectra
 Title: Energy Spectra and Coherence for Point Processes
 Version: 0.0.1
-Authors@R: person(given = "Robert",
-           family = "Dunne",
-           role = c("aut", "cre"),
-           email = "rob.dunne@csiro.au",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
+Author: Robert Dunne
+Maintainer:  <rob.dunne@csiro.au>
 Description: Calculates the energy spectra using the multitapered fft. Based on several functions from the "chronux" matlab library.
 License: GPL-2
 Encoding: UTF-8
